# Coursework_6

./: .env.sample  .gitignore  README.md  data_groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: admin.py  cron.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: run.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/includes/: main_menu.html
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_list.html  message_detail.html  message_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: user_confirm_delete.html  user_detail.html  user_form.html
